vault/http-route-vault.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-httproute

spec:
  parentRefs:
    - name: srjm-gateway-nginx
      namespace: qrcode-system
      sectionName: vault-http

    - name: srjm-gateway-nginx
      namespace: qrcode-system
      sectionName: vault-https

  hostnames:
  - vault.geradorqrcode-srjm.uk

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vault
      port: 8200
